--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.6",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0",
+      "body-parser": "^1.19.1",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "inversify": "^6.0.1",
+      "inversify-express-utils": "^6.4.3",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.6"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
