--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
-      "ts-node": "10.7.0",
       "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
       "body-parser": "^1.19.1",
+      "date-fns": "^2.28.0",
       "express": "^4.17.2",
       "inversify": "^6.0.1",
       "inversify-express-utils": "^6.4.3",
