--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "devDependencies": {
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+      "typescript": "4.5.2",
+      "@types/jsonwebtoken": "^8.5.1"
    },
    "dependencies": {
       "body-parser": "^1.19.1",
@@ -14,6 +15,7 @@
       "express": "^4.17.2",
       "inversify": "^6.0.1",
       "inversify-express-utils": "^6.4.3",
+      "jsonwebtoken": "^8.5.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.6",
