--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/jsonwebtoken": "^8.5.1",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2",
-      "@types/jsonwebtoken": "^8.5.1"
+      "typescript": "4.5.2"
    },
    "dependencies": {
       "body-parser": "^1.19.1",
       "date-fns": "^2.28.0",
+      "dotenv-safe": "^8.2.0",
       "express": "^4.17.2",
       "inversify": "^6.0.1",
       "inversify-express-utils": "^6.4.3",
