--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
    },
    "dependencies": {
       "body-parser": "^1.19.1",
+      "cors": "^2.8.5",
       "date-fns": "^2.28.0",
+      "date-fns-tz": "^1.3.6",
       "dotenv-safe": "^8.2.0",
       "express": "^4.17.2",
       "inversify": "^6.0.1",
-      "cors": "^2.8.5",
       "inversify-express-utils": "^6.4.3",
       "jsonwebtoken": "^8.5.1",
       "pg": "^8.4.0",
